{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 362,
  "lineage": "5e60cb84-6665-5870-ad8b-cc66ac0e66ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "bastion-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-03bcf062126979ebd",
            "default_network_acl_id": "acl-03bcf062126979ebd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "172.16.0.0/22",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              }
            ],
            "id": "acl-03bcf062126979ebd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "172.16.0.0/22",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [],
            "tags": {
              "Name": "bastion-nacl"
            },
            "tags_all": {
              "Name": "bastion-nacl"
            },
            "vpc_id": "vpc-0b3b991e7a41ab6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "shopping-db1-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-0c2b1a966b1c8c84f",
            "default_network_acl_id": "acl-0c2b1a966b1c8c84f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.10.10.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 111,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 112,
                "to_port": 3306
              }
            ],
            "id": "acl-0c2b1a966b1c8c84f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.10.10.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 111,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 112,
                "to_port": 3306
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [],
            "tags": {
              "Name": "shopping-db1-nacl"
            },
            "tags_all": {
              "Name": "shopping-db1-nacl"
            },
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "shopping-internalnode-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-01ef553ac4a5f65ea",
            "default_network_acl_id": "acl-01ef553ac4a5f65ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 113,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 112,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 111,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "id": "acl-01ef553ac4a5f65ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [],
            "tags": {
              "Name": "shopping-internalnode-nacl"
            },
            "tags_all": {
              "Name": "shopping-internalnode-nacl"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:route-table/rtb-09c914a488d3d6e3e",
            "default_route_table_id": "rtb-09c914a488d3d6e3e",
            "id": "rtb-09c914a488d3d6e3e",
            "owner_id": "944697335072",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f109c6eab61d6a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopping-rt"
            },
            "tags_all": {
              "Name": "shopping-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shopping-igw",
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:route-table/rtb-0eac8066d81e72dd3",
            "default_route_table_id": "rtb-0eac8066d81e72dd3",
            "id": "rtb-0eac8066d81e72dd3",
            "owner_id": "944697335072",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "shopping-db-rt"
            },
            "tags_all": {
              "Name": "shopping-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:route-table/rtb-0ca292a9ddf8e8b04",
            "default_route_table_id": "rtb-0ca292a9ddf8e8b04",
            "id": "rtb-0ca292a9ddf8e8b04",
            "owner_id": "944697335072",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bastion-rt"
            },
            "tags_all": {
              "Name": "bastion-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3b991e7a41ab6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "bastion-default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:security-group/sg-05db3ef169d4b58e4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05db3ef169d4b58e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "944697335072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-default-sg"
            },
            "tags_all": {
              "Name": "bastion-default-sg"
            },
            "vpc_id": "vpc-0b3b991e7a41ab6fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "shopping-db-default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:security-group/sg-0d31798d81d79e4d7",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d31798d81d79e4d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "944697335072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopping-db-default-sg"
            },
            "tags_all": {
              "Name": "shopping-db-default-sg"
            },
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "shopping-default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:security-group/sg-078fb6fed01d8729c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078fb6fed01d8729c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "944697335072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopping-default-sg"
            },
            "tags_all": {
              "Name": "shopping-default-sg"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:instance/i-0cb3260a6f14f0b96",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb3260a6f14f0b96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ekskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027c7feca652eb869",
            "private_dns": "ip-10-0-20-69.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.69",
            "public_ip": "35.74.22.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07509e9c87a9dc5d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02db01d6dbb6be821",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078fb6fed01d8729c"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp",
            "aws_subnet.master-subnet",
            "aws_vpc.shopping-vpc",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shopping-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:internet-gateway/igw-08f109c6eab61d6a9",
            "id": "igw-08f109c6eab61d6a9",
            "owner_id": "944697335072",
            "tags": {
              "Name": "shopping-igw"
            },
            "tags_all": {
              "Name": "shopping-igw"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "shopping-db2-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-032ca08800e5fc7c4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              }
            ],
            "id": "acl-032ca08800e5fc7c4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3306
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [
              "subnet-09463ef810143a9cb"
            ],
            "tags": {
              "Name": "shopping-db2-nacl"
            },
            "tags_all": {
              "Name": "shopping-db2-nacl"
            },
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.db2-subnet",
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "shopping-firewall-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-0e2d09ddca1260318",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "219.240.87.167/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              }
            ],
            "id": "acl-0e2d09ddca1260318",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "219.240.87.167/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [
              "subnet-065495cbe71f6a6b4"
            ],
            "tags": {
              "Name": "shopping-firewall-nacl"
            },
            "tags_all": {
              "Name": "shopping-firewall-nacl"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.firewall-subnet",
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "shopping-masternode-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-0644b94651a3aa414",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 113,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 112,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 111,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "id": "acl-0644b94651a3aa414",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [
              "subnet-02db01d6dbb6be821"
            ],
            "tags": {
              "Name": "shopping-masternode-nacl"
            },
            "tags_all": {
              "Name": "shopping-masternode-nacl"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.master-subnet",
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "shopping-workernode-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:network-acl/acl-0f6242b80b953d5ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 113,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 112,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 111,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              }
            ],
            "id": "acl-0f6242b80b953d5ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "owner_id": "944697335072",
            "subnet_ids": [
              "subnet-01b9270dd7e29259c",
              "subnet-038ec31b0bbf7d1e0",
              "subnet-07423ea466126f9c8",
              "subnet-0f8de4cfb2b9a1c27"
            ],
            "tags": {
              "Name": "shopping-workernode-nacl"
            },
            "tags_all": {
              "Name": "shopping-workernode-nacl"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.worker1-subnet",
            "aws_subnet.worker2-subnet",
            "aws_subnet.worker3-subnet",
            "aws_subnet.worker4-subnet",
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-0bfd42caf82f4ebd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfd42caf82f4ebd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion-subnet"
            },
            "tags_all": {
              "Name": "bastion-subnet"
            },
            "vpc_id": "vpc-0b3b991e7a41ab6fe"
          },
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-0a66b2887066208fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a66b2887066208fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1-subnet"
            },
            "tags_all": {
              "Name": "db1-subnet"
            },
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "dependencies": [
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-09463ef810143a9cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09463ef810143a9cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2-subnet"
            },
            "tags_all": {
              "Name": "db2-subnet"
            },
            "vpc_id": "vpc-0723b40db573c679c"
          },
          "dependencies": [
            "aws_vpc.shopping-db-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-065495cbe71f6a6b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065495cbe71f6a6b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "firewall-subnet"
            },
            "tags_all": {
              "Name": "firewall-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal-node1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-09aeec655bf1e1398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aeec655bf1e1398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal-node1-subnet"
            },
            "tags_all": {
              "Name": "internal-node1-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal-node2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-099dd74c350429074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099dd74c350429074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internal-node2-subnet"
            },
            "tags_all": {
              "Name": "internal-node2-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "master-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-02db01d6dbb6be821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02db01d6dbb6be821",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "master-subnet"
            },
            "tags_all": {
              "Name": "master-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-0f8de4cfb2b9a1c27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8de4cfb2b9a1c27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "worker1-subnet"
            },
            "tags_all": {
              "Name": "worker1-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-038ec31b0bbf7d1e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038ec31b0bbf7d1e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "worker2-subnet"
            },
            "tags_all": {
              "Name": "worker2-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker3-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-01b9270dd7e29259c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b9270dd7e29259c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "worker3-subnet"
            },
            "tags_all": {
              "Name": "worker3-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker4-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:subnet/subnet-07423ea466126f9c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07423ea466126f9c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944697335072",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "worker4-subnet"
            },
            "tags_all": {
              "Name": "worker4-subnet"
            },
            "vpc_id": "vpc-001a63942740db769"
          },
          "dependencies": [
            "aws_vpc.shopping-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:vpc/vpc-0b3b991e7a41ab6fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/24",
            "default_network_acl_id": "acl-03bcf062126979ebd",
            "default_route_table_id": "rtb-0ca292a9ddf8e8b04",
            "default_security_group_id": "sg-05db3ef169d4b58e4",
            "dhcp_options_id": "dopt-0b190ab7d55bcee1c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3b991e7a41ab6fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca292a9ddf8e8b04",
            "owner_id": "944697335072",
            "tags": {
              "Name": "bastion-vpc"
            },
            "tags_all": {
              "Name": "bastion-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shopping-db-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:vpc/vpc-0723b40db573c679c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/20",
            "default_network_acl_id": "acl-0c2b1a966b1c8c84f",
            "default_route_table_id": "rtb-0eac8066d81e72dd3",
            "default_security_group_id": "sg-0d31798d81d79e4d7",
            "dhcp_options_id": "dopt-0b190ab7d55bcee1c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0723b40db573c679c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eac8066d81e72dd3",
            "owner_id": "944697335072",
            "tags": {
              "Name": "shopping-db-vpc"
            },
            "tags_all": {
              "Name": "shopping-db-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shopping-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:944697335072:vpc/vpc-001a63942740db769",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ef553ac4a5f65ea",
            "default_route_table_id": "rtb-09c914a488d3d6e3e",
            "default_security_group_id": "sg-078fb6fed01d8729c",
            "dhcp_options_id": "dopt-0b190ab7d55bcee1c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001a63942740db769",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c914a488d3d6e3e",
            "owner_id": "944697335072",
            "tags": {
              "Name": "shopping-vpc"
            },
            "tags_all": {
              "Name": "shopping-vpc"
            }
          }
        }
      ]
    }
  ]
}